--- a/charts/models/values.yaml
+++ b/charts/models/values.yaml
@@ -24,18 +24,8 @@ rateLimitPolicy:
             window: 1m
 
 backends:
-  gcp-primary:
-    resourceName: gcp-backend-svc
-    schema: OpenAI
-    fqdn:
-      hostname: api.ai.kivoyo.com
-      port: 443
-    apiKeySecretRef:
-      name: gcp-backend-apikey-secret
-      key: apiKey
-    tlsHostname: api.ai.kivoyo.com
-  fw-primary:
-    resourceName: fw-backend-svc
+  fw-01:
+    resourceName: fw-backend-01-svc
     schema: OpenAI
     prefix: /inference/v1
     fqdn:
@@ -45,58 +35,44 @@ backends:
       name: fw-primary-apikey
       key: apiKey
     tlsHostname: api.fireworks.ai
-  fallback-node:
-    resourceName: global-fallback-svc
+  fw-02:
+    resourceName: fw-backend-02-svc
+    schema: OpenAI
+    prefix: /inference/v1
+    fqdn:
+      hostname: api.fireworks.ai
+      port: 443
+    apiKeySecretRef:
+      name: fw-primary-apikey
+      key: apiKey
+    tlsHostname: api.fireworks.ai
+  gpt-01:
+    resourceName: gpt-backend-01-svc
     schema: OpenAI
     fqdn:
       hostname: api.ai.kivoyo.com
       port: 443
     apiKeySecretRef:
-      name: gcp-primary-apikey
+      name: gpt-primary-apikey
       key: apiKey
     tlsHostname: api.ai.kivoyo.com
+  gpt-02:
+    resourceName: gpt-backend-02-svc
+    schema: OpenAI
+    fqdn:
+      hostname: api.ai.kivoyo.com
+      port: 443
+    apiKeySecretRef:
+      name: gpt-primary-apikey
+      key: apiKey
+    tlsHostname: api.ai.kivoyo.com
+ 
 
 models:
-  gemini-2-0-lite:
-    enabled: true
-    modelMatch: "gemini-2.0-lite"
-
-    rateLimit:
-      # ADD: scope limits to (user × model)
-      scope:
-        - user
-        - model
-
-      limits:
-        default:
-          rates:
-            - limit: 2
-              window: 1m
-
-    backends:
-      gcp-01: 
-        enabled: true
-        ref: gcp-primary
-        modelNameOverride: "gpt-5"
-        priority: 0
-        weight: 50
-      gcp-02: 
-        enabled: true
-        ref: gcp-primary
-        modelNameOverride: "gpt-5-mini"
-        priority: 0
-        weight: 50
-      aws-failover:
-        enabled: false
-        ref: fw-primary
-        priority: 1
-
-  claude-sonnet:
+  fireworks:
     enabled: true
 
-    # ADD: same per (user × model) scope, even without custom limits
     rateLimit:
-      # ADD: scope limits to (user × model)
       scope:
         - user
         - model
@@ -110,9 +86,33 @@ models:
     backends:
       aws-01:
         enabled: true
-        ref: fw-primary
+        ref: fw-01
         modelNameOverride: "accounts/fireworks/models/qwen3-vl-235b-a22b-instruct"
       aws-02:
         enabled: true
-        ref: fw-primary
+        ref: fw-02
         modelNameOverride: "accounts/fireworks/models/qwen3-vl-30b-a3b-thinking"
+
+  gpt:
+    enabled: true
+
+    rateLimit:
+      scope:
+        - user
+        - model
+
+      limits:
+        default:
+          rates:
+            - limit: 3
+              window: 1m
+
+    backends:
+      aws-01:
+        enabled: true
+        ref: gpt-01
+        modelNameOverride: "gpt-5"
+      aws-02:
+        enabled: true
+        ref: gpt-02
+        modelNameOverride: "gpt-5-mini"
