--- a/charts/cnpg-pgdump-backup/Chart.yaml
+++ b/charts/cnpg-pgdump-backup/Chart.yaml
@@ -6,7 +6,6 @@ version: 0.1.0
 appVersion: "0.1.0"
 
 dependencies:
-  - name: common
+  - name: app-template
     version: 4.6.2
     repository: https://bjw-s-labs.github.io/helm-charts
-
